# spimex_EM

./: README.md  config.py  pyproject.toml
api/: main.py
api/app/cache/: cache_services.py  redis_client.py
api/app/database/: database.py
api/app/handlers/: dynamics.py  last_trading_dates.py  trading_results.py
api/app/schemas/: schemas.py
api/app/services/: dynamics.py  last_trading_dates.py
database/: database.py  models.py
migrations/: env.py
parser/: data_classes.py  database_saver.py  downloader.py  file_parser.py  run.py  site_parser.py
parser_scripts/: database_saver.py  downloader.py  file_parser.py  run.py  site_parser.py
